test/libyul/yulSyntaxTests/zkevm/invalid/code_source.yul
{
	$zk_code_source()
}
// ====
// dialect: evm
// ----
// TypeError 3083: (3-20): Top-level expressions are not supposed to return values (this expression returns 1 value). Use ``pop()`` or assign them.
